# pyadic

./: README.md  pyproject.toml  setup.py
pyadic/: models.py
pyadic/parsers/: __init__.py  zoom.py
