[tool.poetry]
name = "pyadic"
version = "0.1.0"
description = "Tools for analyzing chat transcripts"
authors = ["tomNummy <tom.nummy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "==19.10b0"
flake8 = "*"
isort = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"